Update TEST SEM